--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlainID Architecture</title>
+    <title>PlainID Deployment Architecture</title>
     <style>
         * {
             margin: 0;
@@ -150,7 +150,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>PlainID Architecture</h1>
+        <h1>PlainID Deployment Architecture</h1>
         <p class="subtitle">Deployment options and component definitions</p>
 
         <div class="options">
@@ -162,9 +162,9 @@
             </ul>
         </div>
 
-        <h2>Architecture Diagram</h2>
+        <h2>Deployment Architecture Diagram</h2>
         <div class="diagram">
-            <img src="Deployment_Architecture.svg" alt="PlainID Architecture Diagram" style="width: 100%; height: auto;">
+            <img src="Deployment_Architecture.svg" alt="PlainID Deployment Architecture Diagram" style="width: 100%; height: auto;">
         </div>
 
         <h2 class="definitions">Definitions</h2>
