Enhance Communication Tunnel description
Expanded description of the Communication Tunnel.

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="term">
             <div class="term-title">Communication Tunnel</div>
             <div class="term-description">
-                Secure, encrypted connection between PlainID SaaS Platform and customer environments.
+                Secure, encrypted connection between PlainID SaaS Platform and customer environments. Operates over Socket 443 (HTTPS) for secure, bidirectional communication through firewalls.
             </div>
         </div>
 
